--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,27 +1,41 @@
-# cloudbuild.yaml
 substitutions:
-  _REGION: us-central1
-  _REPO:   web-frontend          # Artifact Registry repo name
-  _SERVICE: frontend             # Cloud Run service name
+  _REGION: us-central1          # build + deploy region
+  _REPO:   web-frontend         # Artifact Registry repo name
+  _SERVICE: frontend            # Cloud Run service name
+
+# Tell Cloud Build to write logs only to Cloud Logging
+options:
+  logging: CLOUD_LOGGING_ONLY   # or use defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
 
 steps:
   # 1. Build the container
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA', '.']
+  - name: gcr.io/cloud-builders/docker
+    args:
+      - build
+      - --tag
+      - ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA
+      - .
 
   # 2. Push to Artifact Registry
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push',  '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA']
+  - name: gcr.io/cloud-builders/docker
+    args:
+      - push
+      - ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA
 
-  # 3. Deploy to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  # 3. Deploy to Cloud Run (adjust/delete if you deploy elsewhere)
+  - name: gcr.io/google.com/cloudsdktool/cloud-sdk
     entrypoint: gcloud
     args:
-      - run; deploy; ${_SERVICE}
-      - --image; ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA
-      - --region; ${_REGION}
-      - --platform; managed
+      - run
+      - deploy
+      - ${_SERVICE}
+      - --image
+      - ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA
+      - --region
+      - ${_REGION}
+      - --platform
+      - managed
       - --quiet
 
 images:
-- '${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA'
+- ${_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}:$SHORT_SHA
